k8s-dr-main/Ai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: default
  labels:
    app: ai-service
spec:
  type: ClusterIP
  selector:
    app: ai-service
  ports:
  - name: http
    port: 8003
    targetPort: 8003
    protocol: TCP
